// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`keeps .npmrc semantically idempotent after normalization 1`] = `
"┌  📦🔑 Configure vsts-npm-auth-improved 📦🔑
│
◆  Where should package.json files be searched for?
│  ./█
└
◇  Where should package.json files be searched for?
│  ./
│
◇  Found 1 package.json file.
│
◆  Which packages should be configured?
│  ◻ ALL (Configure every package)
│  ◻ package.json
│  ↑/↓ to navigate • Space: select • Enter: confirm
└
│  ◻ ALL│  ◼ package.json◇  Which packages should be configured?
│  package.json
│
◇  Configuration files are ready.
│
◆  Changed 1 file in 1 package
│
│  ./
│    UNCHANGED  package.json
│    UPDATED    .npmrc
│
└  Authentication configuration complete. 😊

"
`;

exports[`keeps .npmrc semantically idempotent after normalization 2`] = `
"┌  📦🔑 Configure vsts-npm-auth-improved 📦🔑
│
◆  Where should package.json files be searched for?
│  ./█
└
◇  Where should package.json files be searched for?
│  ./
│
◇  Found 1 package.json file.
│
◆  Which packages should be configured?
│  ◻ ALL (Configure every package)
│  ◻ package.json
│  ↑/↓ to navigate • Space: select • Enter: confirm
└
│  ◻ ALL│  ◼ package.json◇  Which packages should be configured?
│  package.json
│
◇  Configuration files are ready.
│
◆  No files changed
│
│  ./
│    UNCHANGED  package.json
│    UNCHANGED  .npmrc
│
└  Authentication configuration complete. 😊

"
`;
